@@ -2,13 +2,7 @@ package rearth.oritech.block.entity.pipes;
 
 import io.wispforest.endec.Endec;
 import io.wispforest.owo.serialization.endec.MinecraftEndecs;
-import net.fabricmc.fabric.api.lookup.v1.block.BlockApiCache;
 import net.fabricmc.fabric.api.screenhandler.v1.ExtendedScreenHandlerFactory;
-import net.fabricmc.fabric.api.transfer.v1.item.InventoryStorage;
-import net.fabricmc.fabric.api.transfer.v1.item.ItemStorage;
-import net.fabricmc.fabric.api.transfer.v1.item.ItemVariant;
-import net.fabricmc.fabric.api.transfer.v1.storage.Storage;
-import net.fabricmc.fabric.api.transfer.v1.transaction.Transaction;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.entity.BlockEntity;
 import net.minecraft.block.entity.BlockEntityTicker;
@@ -16,8 +10,6 @@ import net.minecraft.component.DataComponentTypes;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.entity.player.PlayerInventory;
 import net.minecraft.inventory.Inventories;
-import net.minecraft.inventory.SidedInventory;
-import net.minecraft.inventory.SimpleInventory;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NbtCompound;
 import net.minecraft.nbt.NbtElement;
@@ -25,7 +17,6 @@ import net.minecraft.nbt.NbtList;
 import net.minecraft.registry.RegistryWrapper;
 import net.minecraft.screen.ScreenHandler;
 import net.minecraft.server.network.ServerPlayerEntity;
-import net.minecraft.server.world.ServerWorld;
 import net.minecraft.text.Text;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Direction;
@@ -36,17 +27,17 @@ import rearth.oritech.client.init.ModScreens;
 import rearth.oritech.client.ui.ItemFilterScreenHandler;
 import rearth.oritech.init.BlockEntitiesContent;
 import rearth.oritech.network.NetworkContent;
-import rearth.oritech.util.InventoryProvider;
+import rearth.oritech.util.item.ItemApi;
+import rearth.oritech.util.item.containers.SimpleInventoryStorage;
 
 import java.util.HashMap;
 import java.util.Map;
 
-public class ItemFilterBlockEntity extends BlockEntity implements InventoryProvider, ExtendedScreenHandlerFactory, BlockEntityTicker<ItemFilterBlockEntity> {
+public class ItemFilterBlockEntity extends BlockEntity implements ItemApi.BlockProvider, ExtendedScreenHandlerFactory, BlockEntityTicker<ItemFilterBlockEntity> {
     
-    public final FilterBlockInventory inventory = new FilterBlockInventory(1);
+    public final FilterBlockInventory inventory = new FilterBlockInventory(1, this::markDirty);
     
     protected FilterData filterSettings = new FilterData(false, true, false, new HashMap<>());
-    protected BlockApiCache<Storage<ItemVariant>, Direction> lookupCache;
     
     @Override
     protected void writeNbt(NbtCompound nbt, RegistryWrapper.WrapperLookup registryLookup) {
@@ -95,9 +86,10 @@ public class ItemFilterBlockEntity extends BlockEntity implements InventoryProvi
     }
     
     @Override
-    public Storage<ItemVariant> getInventory(Direction direction) {
-        return InventoryStorage.of(inventory, direction);
+    public ItemApi.InventoryStorage getInventoryStorage(Direction direction) {
+        return inventory;
     }
+    
     @Override
     public Object getScreenOpeningData(ServerPlayerEntity player) {
         NetworkContent.MACHINE_CHANNEL.serverHandle(this).send(new NetworkContent.ItemFilterSyncPacket(pos, filterSettings));
@@ -121,26 +113,17 @@ public class ItemFilterBlockEntity extends BlockEntity implements InventoryProvi
         // if non-empty and inventory in target, move it
         if (world.isClient || inventory.isEmpty()) return;
         
-        var targetInv = getCache().find(state.get(ItemFilterBlock.TARGET_DIR).getOpposite());
+        var targetDirection = getCachedState().get(ItemFilterBlock.TARGET_DIR);
+        var targetPos = pos.add(targetDirection.getVector());
+        
+        // todo caching
+        var targetInv = ItemApi.BLOCK.find(world, targetPos, targetDirection);
         if (targetInv == null) return;
         
-        try (var tx = Transaction.openOuter()) {
-            var firstItem = inventory.heldStacks.get(0);
-            var inserted = targetInv.insert(ItemVariant.of(firstItem), firstItem.getCount(), tx);
-            firstItem.decrement((int) inserted);
-            tx.commit();
-        }
+        var firstItem = inventory.heldStacks.getFirst();
+        var inserted = targetInv.insert(firstItem, false);
+        firstItem.decrement(inserted);
         
-    }
-    
-    private BlockApiCache<Storage<ItemVariant>, Direction> getCache() {
-        if (lookupCache == null) {
-            var targetDirection = getCachedState().get(ItemFilterBlock.TARGET_DIR);
-            var targetPos = pos.add(targetDirection.getVector());
-            lookupCache = BlockApiCache.create(ItemStorage.SIDED, (ServerWorld) world, targetPos);
-        }
-        
-        return lookupCache;
     }
     
     public FilterData getFilterSettings() {
@@ -159,36 +142,27 @@ public class ItemFilterBlockEntity extends BlockEntity implements InventoryProvi
     }
     
     // items is a map of position index (in the filter GUI) to filtered item stack
-    public record FilterData(boolean useNbt, boolean useWhitelist, boolean useComponents, Map<Integer, ItemStack> items) {
+    public record FilterData(boolean useNbt, boolean useWhitelist, boolean useComponents,
+                             Map<Integer, ItemStack> items) {
     }
     
-    public class FilterBlockInventory extends SimpleInventory implements SidedInventory {
+    public class FilterBlockInventory extends SimpleInventoryStorage {
         
-        public FilterBlockInventory(int size) {
-            super(size);
+        public FilterBlockInventory(int size, Runnable onUpdate) {
+            super(size, onUpdate);
         }
         
         @Override
-        public void markDirty() {
-            ItemFilterBlockEntity.this.markDirty();
+        public boolean supportsExtraction() {
+            return false;
         }
         
-        @Override
-        public int[] getAvailableSlots(Direction side) {
-            return new int[]{0};
-        }
-        
-        @Override
-        public boolean canInsert(int slot, ItemStack stack, @Nullable Direction side) {
+        public boolean canInsert(ItemStack stack) {
             
-            // check sides first
-            var outputSide = getCachedState().get(ItemFilterBlock.TARGET_DIR);
-            if (side.equals(outputSide)) return false;
-            
-            // then check filter settings
+            // check filter settings
             var checkNbt = filterSettings.useNbt;
-            var matchesFilterItems = false; // check if at least 1 item matches
-            var checkComponents = true;
+            var checkComponents = filterSettings.useComponents;
+            var matchesFilterItems = false; // true if at least 1 item matches
             
             for (var filterItem : filterSettings.items.values()) {
                 var matchesType = stack.getItem().equals(filterItem.getItem());
@@ -231,10 +205,12 @@ public class ItemFilterBlockEntity extends BlockEntity implements InventoryProvi
         }
         
         @Override
-        public boolean canExtract(int slot, ItemStack stack, Direction side) {
+        public int insertToSlot(ItemStack addedStack, int slot, boolean simulate) {
             
-            var outputSide = getCachedState().get(ItemFilterBlock.TARGET_DIR);
-            return side.equals(outputSide);
+            if (!canInsert(addedStack))
+                return 0;
+            
+            return super.insertToSlot(addedStack, slot, simulate);
         }
     }
     
